--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Teample
 endorsed.classpath=
 excludes=
-file.reference.simplecaptcha-1.2.1.jar=C:\\Users\\seung\\Downloads\\simplecaptcha-1.2.1.jar
+file.reference.mysql-connector-j-8.0.33.jar=../jspProject/src/main/webapp/WEB-INF/lib/mysql-connector-j-8.0.33.jar
+file.reference.simplecaptcha-1.2.1.jar=../simplecaptcha-1.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQL_JDBC_Driver.classpath}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${file.reference.simplecaptcha-1.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
