--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Teample
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.33.jar=../jspProject/src/main/webapp/WEB-INF/lib/mysql-connector-j-8.0.33.jar
-file.reference.simplecaptcha-1.2.1.jar=../simplecaptcha-1.2.1.jar
+file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\seung\\OneDrive\\\ubc14\ud0d5 \ud654\uba74\\code\\mysql-connector-j-8.0.33.jar
+file.reference.simplecaptcha-1.2.1.jar=C:\\Users\\seung\\Downloads\\simplecaptcha-1.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -77,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Teample
-main.class=NewJFrame
+main.class=db.NewJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -85,10 +85,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
